--- a/FrontEnd/cadastroSintComorb.html
+++ b/FrontEnd/cadastroSintComorb.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <div class="formulario">
+    <div class="container-sm formulario">
         <div class="titulo">
             <h1>Cadastro de sintomas</h1>
         </div>
@@ -34,7 +34,7 @@
     </div>
 
     
-    <div class="formulario">
+    <div class="container-sm formulario">
         <hr>
         <div class="titulo">
             <h1>Cadastro de comorbidades</h1>
@@ -49,7 +49,7 @@
         <button class="btn btn-primary" type="submit">Cadastrar comorbidade</button>
     </div>
    
-    <div class="formulario" style="padding-bottom: 100px;">
+    <div class="container-sm formulario" style="padding-bottom: 100px;">
         <hr>
         <a class="btn btn-secondary" href="cadastroUsuario.html" role="button">Cadastrar usuário</a>
         <a class="btn btn-secondary" href="cadastroEmpresa.html" role="button">Cadastrar empresa</a>
