--- a/FrontEnd/cadastroUsuario.html
+++ b/FrontEnd/cadastroUsuario.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="formulario">
+    <div class="container-sm formulario">
         <div class="titulo">
             <h1>Cadastro de usuários</h1>
         </div>
@@ -95,7 +95,7 @@
         
     </div>
 
-    <div class="formulario" style="padding-bottom: 100px;">
+    <div class="container-sm formulario" style="padding-bottom: 100px;">
         <hr>
         <a class="btn btn-secondary" href="cadastroEmpresa.html" role="button">Cadastrar empresa</a>
         <a class="btn btn-secondary" href="cadastroSintComorb.html" role="button">Cadastrar sintoma/comorbidade</a>
