--- a/FrontEnd/cadastroVacina.html
+++ b/FrontEnd/cadastroVacina.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <div class="formulario">
+    <div class="container-sm formulario">
         <div class="titulo">
             <h1>Cadastro de vacinas</h1>
         </div>
@@ -35,7 +35,7 @@
 
     </div>
 
-    <div class="formulario" style="padding-bottom: 100px;">
+    <div class="container-sm formulario" style="padding-bottom: 100px;">
         <hr>
         <a class="btn btn-secondary" href="cadastroUsuario.html" role="button">Cadastrar usuário</a>
         <a class="btn btn-secondary" href="cadastroEmpresa.html" role="button">Cadastrar empresa</a>
